# fastlevenshtein

./: .gitignore  Cargo.toml  README.rst  action.yml
src/: lib.rs  main.rs
