[package]
authors = ["ThibaultB"]
name = "fastlevenshtein"
version = "0.1.7"
description = "A Rust-based levenshtein distance implementation."
edition = "2021"
documentation = "https://github.com/thibaultbl/fastlevenshtein"
readme = "README.rst"
homepage = "https://github.com/thibaultbl/fastlevenshtein"
repository = "https://github.com/thibaultbl/fastlevenshtein"

[lib]
name = "fastlevenshtein"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]


[dependencies.pyo3]
version = "0.15.0"
features = ["extension-module"]

[dependencies]

[package.metadata.maturin]
classifier=[
    "License :: OSI Approved :: GNU General Public License (GPL) ",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: POSIX :: Linux",
]
